--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "xlsx": "^0.17.5"
   },
   "scripts": {
     "start": "react-scripts start",
