--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.8",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^1.0.1",
