--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   "dependencies": {
     "@sendgrid/mail": "^7.6.0",
     "aws-sdk": "^2.1081.0",
+    "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fast-csv": "^4.3.6",
+    "fs": "^0.0.1-security",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.0",
