--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/raibove/remoto#readme",
   "dependencies": {
+    "@azure/msal-browser": "^2.22.1",
+    "@azure/msal-node": "^1.7.0",
+    "@microsoft/microsoft-graph-client": "^3.0.2",
     "@sendgrid/mail": "^7.6.0",
     "aws-sdk": "^2.1081.0",
     "axios": "^0.21.4",
@@ -29,6 +32,7 @@
     "express": "^4.17.1",
     "fast-csv": "^4.3.6",
     "fs": "^0.0.1-security",
+    "isomorphic-fetch": "^3.0.0",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.0",
